Prevent input/chat area overlap with new --my-delta variable

--- a/css/main.css
+++ b/css/main.css
@@ -342,17 +342,20 @@ div.svelte-362y77>*, div.svelte-362y77>.form>* {
 }
 
 .chat-parent {
-    height: calc(100dvh - 98px - var(--chat-input-offset));
+    height: calc(100dvh - 98px - var(--chat-input-offset) - var(--my-delta));
     overflow: auto !important;
     border-radius: 0 0 8px 8px !important;
+    margin-bottom: var(--my-delta) !important;
 }
 
 .old-ui .chat-parent {
-    height: calc(100dvh - 192px - var(--chat-input-offset));
+    height: calc(100dvh - 192px - var(--chat-input-offset) - var(--my-delta));
+    margin-bottom: var(--my-delta) !important;
 }
 
 .chat-parent.bigchat {
-    height: calc(100dvh - 98px - var(--chat-input-offset)) !important;
+    height: calc(100dvh - 98px - var(--chat-input-offset) - var(--my-delta)) !important;
+    margin-bottom: var(--my-delta) !important;
 }
 
 .chat > .messages {
